2007-11-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* vc-git.el (vc-git-show-log-entry): New func.

	* vc-git.el (vc-git--call, vc-git--out-ok): New funcs.
	(vc-git-state): Use vc-git--call.
	(vc-git-registered, vc-git-working-revision)
	(vc-git-previous-revision, vc-git-next-revision)
	(vc-git--run-command-string, vc-git-symbolic-commit):
	Use vc-git--out-ok.

2007-11-24  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/byte-run.el (declare-function): Doc fix.

2007-11-24  Kenichi Handa  <handa@m17n.org>

	* international/ucs-tables.el (ucs-8859-7-alist): Update the table.

2007-11-23  David Kastrup  <dak@gnu.org>

	* server.el (server-process-filter): Use `command-line-args-left'

2007-11-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nxml/subdirs.el, nxml/char-data/subdirs.el, nxml/rng-auto.el: Remove.

2007-11-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-deduce-fileset): Also look for a fileset in the parent
	buffer if the parent buffer is in vc-dired-mode.

2007-11-23  Mark A. Hershberger  <mah@everybody.org>

	* nxml: Initial merge of nxml.  Kept nxml/char-name subdir for now.

2007-11-23  Juri Linkov  <juri@jurta.org>

	* dired.el (dired-read-dir-and-switches): For C-x d, set the
	value for M-n to the visited file name of the current buffer.
	Use minibuffer-with-setup-hook to set minibuffer-default to
	buffer-file-name inside read-file-name.

	* man.el (Man-getpage-in-background): Don't disregard user option
	`Man-width' on non-window systems.  Remove test for `window-system'
	around setting envvar "COLUMNS" depending on the value of `Man-width'.

	* progmodes/grep.el (grep-process-setup): Set envvar "TERM" to
	"emacs-grep".  Set envvar "GREP_OPTIONS" to "--color=auto" instead
	of "--color=always".

2007-11-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/lisp.el (beginning-of-defun-raw): Pass `arg' down to
	beginning-of-defun-function.

2007-11-22  Reiner Steib  <Reiner.Steib@gmx.de>
